# hyper-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: api.md
mcp_server/: README.md  claude_desktop_config_patch.json  pyproject.toml  requirements.txt  run_server.py  setup_claude_desktop.py
mcp_server/hyper_rag_mcp/: __init__.py  server.py
notebooks/: 01_exploration.ipynb
scripts/: ingest_folder.py  query_cli.py  query_test.py  test_production_fixes.py  test_query_api.py  test_retrieval.py  test_summarizer.py  wipe_indices.py
src/: main.py
src/analysis/: __init__.py  file_scorer.py  project_summarizer.py  tech_detector.py
src/config/: settings.py
src/core/: cache.py  connection_pool.py  ignore_filter.py  metrics.py  schemas.py
src/generation/: generator.py
src/indexing/: neo4j_graph.py  opensearch_index.py  pageindex_store.py  qdrant_index.py
src/ingestion/: embedder.py  pipeline.py
src/ingestion/parsers/: ast_parser.py  pageindex_builder.py  semtools.py  text_cleaner.py
src/retrieval/: context_builder.py  fusion.py  query_planner.py  reranker.py  retrieval_orchestrator.py
src/retrieval/retrievers/: bm25_retriever.py  graph_retriever.py  pageindex_router.py  vector_retriever.py
